fixed overflow in song-list section

--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
     /* border: 1px solid red; */
 }
 .left{
-    width: 25vw;
+    width: 22vw;
     height: 100vh;
     padding: 10px;
 }
@@ -45,9 +45,13 @@
     display: flex;
     flex-direction: column;
 }
+.song-list{
+    overflow-y: scroll;
+    padding: 14px;
+    margin-top: 10px;
+}
 .song-list ul{
     margin-top: 12px;
-    margin-left: 16px;
 }
 .song-list ul li{
     display: flex;
@@ -62,6 +66,7 @@
     font-size: 13px;
 }
 .song-list ul li span{
+    margin-left: auto;
     font-size: 12px;
 }
 .footer{
